[tool.poetry]
name = "graphs"
version = "0.1.0"
description = ""
authors = ["Dirk Habighorst <dirk.habighorst@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.8.2"
pandas = "^1.4.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
